frontend/src/components/SpotsList/SpotsList.css
.main-content-spots-list {
    width: 100vw;
    max-width: 2520px;
    min-width: 300px;
    padding: 0 24px;
    margin: 120px auto;
    box-sizing: border-box;
}

@media screen and (min-width: 744px) {
    .main-content-spots-list {
        padding: 0 40px;
    }
}

@media screen and (min-width: 1440px) {
    .main-content-spots-list {
        padding: 0 80px;
    }
}

.spots-list-container {
    display: grid;
    grid-template-columns: 1fr;
    column-gap: 24px;
    row-gap: 50px;
    width: 100%;
    height: fit-content;
    box-sizing: border-box;
}

@media screen and (min-width: 550px) {
    .spots-list-container {
        grid-template-columns: repeat(2, 1fr);
    }
}

@media screen and (min-width: 950px) {
    .spots-list-container {
        grid-template-columns: repeat(3, 1fr);
    }
}

@media screen and (min-width: 1128px) {
    .spots-list-container {
        grid-template-columns: repeat(4, 1fr);
    }
}

@media screen and (min-width: 1640px) {
    .spots-list-container {
        grid-template-columns: repeat(5, 1fr);
    }
}

@media screen and (min-width: 1880px) {
    .spots-list-container {
        grid-template-columns: repeat(6, 1fr);
    }
}

.spot-container {
    width: 100%;
    height: 100%;
    box-sizing: border-box;
}

.swipe-wrapper > .swiper-wrapper > .swiper-slide {
    width: calc(100% + 1px) !important;
}

.swipe-wrapper {
    display: flex;
    width: 100%;
    height: 75%;
    border-radius: 15px;
}

.spot-image {
    display: flex;
    width: 100%;
    height: 100%;
    overflow: hidden;
    position: relative;
}

.center {
    width: 100%;
    height: 100%;
    aspect-ratio: 20 / 19;
    object-fit: cover;
}

.image-switch-btns {
    opacity: 0;
    z-index: 2;
    transition: all .2s ease-in-out;
}

.swipe-wrapper:hover .image-switch-btns {
    opacity: 1;
}

.left-arrow {
    background-color: rgba(255, 255, 255, 0.9);
    border: 1px solid rgba(0, 0, 0, 0.6);
    width: 32px;
    height: 32px;
    border-radius: 50%;
    padding: 0;
    margin: 0;
    position: absolute;
    top: calc(50% - 17px);
    left: 15px;
    cursor: pointer;
    transition: all .2s cubic-bezier(0.2, 0, 0, 1);
    z-index: 2;
    box-sizing: border-box;
}


.right-arrow {
    background-color: rgba(255, 255, 255, 0.9);
    border: 1px solid rgba(0, 0, 0, 0.6);
    width: 32px;
    height: 32px;
    border-radius: 50%;
    padding: 0;
    margin: 0;
    position: absolute;
    top: calc(50% - 17px);
    right: 15px;
    cursor: pointer;
    transition: all .2s cubic-bezier(0.2, 0, 0, 1);
    z-index: 2;
    box-sizing: border-box;
}

.left-arrow > img,
.right-arrow > img {
    position: relative;
    top: 1px;
    width: 12px;
    height: 12px;
}

.left-arrow:hover {
    background-color: rgba(255, 255, 255, 1);
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.18);
    transform: scale(1.02);
}


.right-arrow:hover {
    background-color: rgba(255, 255, 255, 1);
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.18);
    transform: scale(1.02);
}

.spot-info {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    width: 100%;
    height: 25%;
    font-size: 14px;
    box-sizing: border-box;
}

.location-info {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    font-size: 15px;
    font-weight: 600;
    color: #222222;
    padding-top: 12px;
}

.spot-location {
    display: block;
    width: 75%;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.star-text {
    font-weight: normal;
    color: #222222;
}

.star-image {
    width: 14px;
    height: 14px;
    object-fit: cover;
    position: relative;
    bottom: -1px;
    margin-right: 3px;
}

.name-info {
    display: -webkit-box;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 2;
    min-height: 40px;
    color: #717171;
    font-size: 15px;
    font-weight: 400;
    line-height: 20px;
    word-wrap: break-word;
    word-break: break-all;
    text-overflow: ellipsis;
    overflow: hidden;
}

.price-info {
    padding-top: 8px;
    font-size: 15px;
    font-weight: 600;
    color: #222222;
    position: relative;
    bottom: 0px;
}

.price-info > span {
    font-size: 14px;
    font-weight: normal;
}

